gccida/c3/flush_pending_lists
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/sched-deps.c:987:28: error: unknown type name 'deps_0'
void  flush_pending_lists( deps_0 *deps, rtx insn, int for_read, int for_write) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/sched-deps.c:994:67: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
add_dependence_list_and_free( insn, &deps->pending_write_insns, ( reg_note)( ( for_read == 0) | 0xE)); 
                                                                  ^~~~~~~~
                                                                  reg_names
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/sched-deps.c:994:76: error: called object type 'const char *[53]' is not a function or function pointer
add_dependence_list_and_free( insn, &deps->pending_write_insns, ( reg_note)( ( for_read == 0) | 0xE)); 
                                                                ~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/sched-deps.c:997:73: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
add_dependence_list_and_free( insn, &deps->last_pending_memory_flush, ( reg_note)( ( for_read == 0) | 0xE)); 
                                                                        ^~~~~~~~
                                                                        reg_names
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/sched-deps.c:997:82: error: called object type 'const char *[53]' is not a function or function pointer
add_dependence_list_and_free( insn, &deps->last_pending_memory_flush, ( reg_note)( ( for_read == 0) | 0xE)); 
                                                                      ~~~~~~~~~~~^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/flush_pending_lists/src/obj/sched-deps.o] Error 1
